# AGIJobsv0

./: .coveragerc  .dockerignore  .env.example  .gitignore  .npmrc  .solcover.js  .solhint.ci.json  .solhint.json  .solhintignore  .trivyignore  AGIJobManagerv1.sol  CHANGELOG.md  MIGRATION.md  Makefile  OPERATIONS.md  OperatorRunbook.md  README.md  RUNBOOK.md  SECURITY.md  Termsv0.md  audit-ci.json  compose.yaml  conftest.py  cypress.config.ts  echidna.yaml  eslint.config.cjs  eslint.config.js  eth_typing.py  foundry.toml  hardhat.config.js  hardhat.coverage.config.js  jest.config.js  jest.setup.webapp.ts  jest.webapp.config.js  package-lock.json  package.json  pytest.ini  requirements-python.txt  sitecustomize.py  slither.config.json  (+5 more)
demo/AGI-Alpha-Node-v0/: .gitignore  Dockerfile  Makefile  PLANNING.md  README.md  __init__.py  config.example.yaml  config.toml  demo_ens_cache.json  docker-compose.yaml  docker-compose.yml  ens_registry.csv  eslint.config.js  eth_typing.py  jobs.json  knowledge.json  package-lock.json  package.json  pyproject.toml  pytest.ini  pytest.sh  requirements-demo.txt  requirements.txt  run_alpha_node.py  run_demo.py  run_tests.py  sitecustomize.py  stake_ledger.csv  state.json  tsconfig.build.json  tsconfig.json
demo/AGI-Alpha-Node-v0/agi_alpha_node/: __init__.py  __main__.py  blockchain.py  compliance.py  config.default.yaml  config.py  console.py  knowledge.py  metrics.py  orchestrator.py  planner.py  specialists.py
demo/AGI-Alpha-Node-v0/agi_alpha_node_demo/: __init__.py  blockchain.py  cli.py  compliance.py  config.py  jobs.py  knowledge.py  metrics.py  orchestrator.py  planner.py  safety.py  utils.py
demo/AGI-Alpha-Node-v0/alpha_node/: __init__.py  blockchain.py  cli.py  compliance.py  config.py  economy.py  ens.py  governance.py  jobs.py  knowledge.py  logging_utils.py  metrics.py  node.py  orchestrator.py  planner.py  safety.py  stake.py  state.py
demo/AGI-Alpha-Node-v0/config/: alpha-node.yaml  alpha_node.example.yml  default.toml  defaults.ts  example.alpha-node.yaml  governance.update.guide.json  governance.update.schema.json  mainnet.guide.json  operator.example.yaml  registry.schema.yml  schema.json
demo/AGI-Alpha-Node-v0/contracts/: AlphaNodeController.sol  JobRegistry.json  (+5 more)
demo/Planetary-Orchestrator-Fabric-v0/: .gitignore  README.md  RUNBOOK.md  pyproject.toml  run_demo.py  tsconfig.json
(+4528 files in other folders)
