[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agi-alpha-node"
version = "0.1.0"
description = "AGI Alpha Node v0 demo powered by AGI Jobs v0 (v2)"
authors = [{name = "Montreal.AI AGI Alpha Node Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=1.10,<2.0",
    "rich>=13.7",
    "typer>=0.9",
    "prometheus-client>=0.19",
    "jinja2>=3.1",
    "numpy>=1.26",
    "httpx>=0.26",
    "web3>=6.11",
    "uvicorn>=0.24",
    "fastapi>=0.104",
    "tenacity>=8.2",
    "pyyaml>=6.0"
]

[project.scripts]
agi-alpha-node = "agi_alpha_node.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]

