[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "planetary-orchestrator-fabric-demo"
version = "0.1.0"
description = "Planetary-scale orchestrator demo for AGI Jobs v0 (v2)"
authors = [{name = "Montreal.AI Demo Team"}]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

